--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
       <artifactId>crc</artifactId>
       <version>1.0.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.15.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
