--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.9.9</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.3</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
