--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
       <artifactId>spring-boot-starter-tomcat</artifactId>
       <version>2.3.1.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.7</version>
+    </dependency>
   </dependencies>
 
   <build>
