--- a/pom.xml
+++ b/pom.xml
@@ -67,10 +67,11 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.11.0</version>
     </dependency>
+
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>4.5.12</version>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.11.0</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -116,6 +117,11 @@
       <artifactId>spring-boot-starter-tomcat</artifactId>
       <version>2.3.1.RELEASE</version>
     </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot</artifactId>
+          <version>2.3.1.RELEASE</version>
+      </dependency>
   </dependencies>
 
   <build>
