--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
       <artifactId>sqlite-jdbc</artifactId>
       <version>3.15.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.4</version>
+    </dependency>
       <dependency>
           <groupId>org.freemarker</groupId>
           <artifactId>freemarker</artifactId>
